test-manifest/app1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: group-5-ingress
  namespace: group-5-dev
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    name: group-5-app
spec:
  rules:
  - host: tcc-01.th1.proen.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/group-5(/|$)(.*)"
        backend:
          service:
            name: group-5-service
            port: 
              number: 80
